
 - DELETE-FILE works on empty directories.

 - In DIRECTORY, :RESOLVE-SYMLINKS defaults to T.

 - Added POSIX function (EXT:CHMOD filename mode)

 - ECL's compiler is now less verbose and hides performance notes, as well as
   invocations of the C compiler. This can be modfied by changing the type
   specifier in c:*suppress-compiler-messages*.

 - Hash tables can now be printed readably when *READ-EVAL* is true. This is
   done using two new functions, EXT:HASH-TABLE-CONTENT and
   EXT:HASH-TABLE-FILL.

 - When a compiler macro fails, ECL simply ignores the errors and
   continues. This is more to the spirit of the compiler macros, as explained
   here http://lists.common-lisp.net/pipermail/pro/2011-December/000675.html

 - INLINE declarations now actually cause the function to be inlined. If
   the function is also proclaimed as INLINE, ECL will store a copy of its
   definition for later use _in other files_. Otherwise INLINE declarations
   remain local to the file being processed.

 - ECL now implements weak hash tables. They are built as ordinary hash tables
   with an extra argument, :WEAKNESS, which may be :KEY, :VALUE,
   :KEY-AND-VALUE, or NIL, for the default behavior. The status of the hash
   table is returned by EXT:HASH-TABLE-WEAKNESS. Note that these associations
   are no substitute for proper management of resources, as the time of
   collection can not be guaranteed.

 - In pathnames, ".." is translated to :UP, not :BACK.

 - ECL introduces two special forms, EXT:CHECKED-VALUE and EXT:TRULY-THE, which
   have the same syntax as THE, but in the first case lead to a type assertion
   at low safety levels and in the second case lead to an unchecked
   declaration. By default THE maps to EXT:CHECKED-VALUE (as in SBCL), but this
   may be controlled globally using the declaration/proclamation
   EXT:THE-IS-CHECKED.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***